started adding scene start variable before remembering scene time != replay time